@@ -16,6 +16,8 @@
  */
 package org.apache.nifi.web.dao.impl;
 
+import org.apache.nifi.asset.Asset;
+import org.apache.nifi.asset.AssetManager;
 import org.apache.nifi.authorization.Authorizer;
 import org.apache.nifi.authorization.RequestAction;
 import org.apache.nifi.authorization.user.NiFiUser;
@@ -29,11 +31,11 @@ import org.apache.nifi.controller.service.ControllerServiceState;
 import org.apache.nifi.groups.ProcessGroup;
 import org.apache.nifi.parameter.Parameter;
 import org.apache.nifi.parameter.ParameterContext;
-import org.apache.nifi.parameter.ParameterDescriptor;
 import org.apache.nifi.parameter.ParameterProvider;
 import org.apache.nifi.parameter.ParameterProviderConfiguration;
 import org.apache.nifi.parameter.StandardParameterProviderConfiguration;
 import org.apache.nifi.web.ResourceNotFoundException;
+import org.apache.nifi.web.api.dto.AssetReferenceDTO;
 import org.apache.nifi.web.api.dto.ParameterContextDTO;
 import org.apache.nifi.web.api.dto.ParameterContextReferenceDTO;
 import org.apache.nifi.web.api.dto.ParameterDTO;
@@ -42,10 +44,13 @@ import org.apache.nifi.web.api.entity.ParameterContextReferenceEntity;
 import org.apache.nifi.web.api.entity.ParameterEntity;
 import org.apache.nifi.web.api.entity.ParameterProviderConfigurationEntity;
 import org.apache.nifi.web.dao.ParameterContextDAO;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -54,10 +59,14 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Repository
 public class StandardParameterContextDAO implements ParameterContextDAO {
+    private static final Logger logger = LoggerFactory.getLogger(StandardParameterContextDAO.class);
+
     private FlowManager flowManager;
+    private AssetManager assetManager;
     private Authorizer authorizer;
 
     @Override
@@ -92,6 +101,7 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
         resolveInheritedParameterContexts(parameterContextDto);
 
         verifyParameterSourceConflicts(parameterContextDto);
+        verifyAssets(parameterContextDto, parameters);
 
         final AtomicReference<ParameterContext> parameterContextReference = new AtomicReference<>();
         flowManager.withParameterContextResolution(() -> {
@@ -108,6 +118,7 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
             }
 
             parameterContextReference.set(parameterContext);
+            logger.info("Created parameter context with id [{}] and name [{}]", parameterContext.getIdentifier(), parameterContext.getName());
         });
         return parameterContextReference.get();
     }
@@ -195,7 +206,7 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
                 throw new IllegalArgumentException("Cannot specify a Parameter without a name");
             }
 
-            final boolean deletion = parameterDto.getDescription() == null && parameterDto.getSensitive() == null && parameterDto.getValue() == null;
+            final boolean deletion = parameterDto.getDescription() == null && parameterDto.getSensitive() == null && parameterDto.getValue() == null && parameterDto.getReferencedAssets() == null;
             if (deletion) {
                 parameterMap.put(parameterDto.getName().trim(), null);
             } else {
@@ -208,15 +219,19 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
     }
 
     private Parameter createParameter(final ParameterDTO dto, final ParameterContext context) {
-        final ParameterDescriptor descriptor = new ParameterDescriptor.Builder()
-            .name(dto.getName())
-            .description(dto.getDescription())
-            .sensitive(Boolean.TRUE.equals(dto.getSensitive()))
-            .build();
+        final String dtoValue = dto.getValue();
+        final List<AssetReferenceDTO> referencedAssets = dto.getReferencedAssets();
+        final boolean referencesAsset = referencedAssets != null && !referencedAssets.isEmpty();
+        final String parameterContextId = dto.getParameterContext() == null ? null : dto.getParameterContext().getId();
 
         final String value;
-        if (dto.getValue() == null && Boolean.TRUE.equals(dto.getValueRemoved())) {
+        List<Asset> assets = null;
+        if (dtoValue == null && !referencesAsset && Boolean.TRUE.equals(dto.getValueRemoved())) {
             // Value is being explicitly set to null
+            value = null;
+        } else if (referencesAsset)  {
+            // Parameter is referencing an asset. The value is not used.
+            assets = getAssets(referencedAssets);
             value = null;
         } else if (dto.getValue() == null && context != null) {
             // Value was just never supplied. Use the value from the Parameter Context, if there is one.
@@ -226,9 +241,27 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
             value = dto.getValue();
         }
 
-        final String parameterContextId = dto.getParameterContext() == null ? null : dto.getParameterContext().getId();
+        return new Parameter.Builder()
+            .name(dto.getName())
+            .description(dto.getDescription())
+            .sensitive(Boolean.TRUE.equals(dto.getSensitive()))
+            .parameterContextId(parameterContextId)
+            .value(value)
+            .referencedAssets(assets)
+            .provided(dto.getProvided())
+            .build();
+    }
 
-        return new Parameter(descriptor, value, parameterContextId, dto.getProvided());
+    private List<Asset> getAssets(final List<AssetReferenceDTO> referencedAssets) {
+        return Stream.ofNullable(referencedAssets)
+                .flatMap(Collection::stream)
+                .map(AssetReferenceDTO::getId)
+                .map(this::getAsset)
+                .collect(Collectors.toList());
+    }
+
+    private Asset getAsset(final String assetId) {
+        return assetManager.getAsset(assetId).orElseThrow(() -> new ResourceNotFoundException("Unable to find asset with id " + assetId));
     }
 
     @Override
@@ -270,6 +303,7 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
             final List<ParameterContext> inheritedParameterContexts = getInheritedParameterContexts(parameterContextDto);
             context.setInheritedParameterContexts(inheritedParameterContexts);
         }
+
         return context;
     }
 
@@ -281,7 +315,7 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
         if (parameterContextDto.getInheritedParameterContexts() != null) {
             inheritedParameterContexts.addAll(parameterContextDto.getInheritedParameterContexts().stream()
                     .map(entity -> flowManager.getParameterContextManager().getParameterContext(entity.getComponent().getId()))
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         return inheritedParameterContexts;
@@ -306,8 +340,23 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
         final List<ParameterContext> inheritedParameterContexts = getInheritedParameterContexts(parameterContextDto);
 
         final Map<String, Parameter> parameters = parameterContextDto.getParameters() == null ? Collections.emptyMap() : getParameters(parameterContextDto, currentContext);
+        verifyAssets(parameterContextDto, parameters);
 
         currentContext.verifyCanUpdateParameterContext(parameters, inheritedParameterContexts);
+    }
+
+    public void verifyAssets(final ParameterContextDTO parameterContextDto, final Map<String, Parameter> parameters) {
+        for (final Parameter parameter : parameters.values()) {
+            if (parameter != null) {
+                final List<Asset> assets = parameter.getReferencedAssets() == null ? Collections.emptyList() : parameter.getReferencedAssets();
+                for (final Asset asset : assets) {
+                    if (!asset.getParameterContextIdentifier().equals(parameterContextDto.getId())) {
+                        throw new IllegalArgumentException(String.format("Parameter [%s] is not allowed to reference asset [%s] which does not belong to parameter context [%s]",
+                                parameter.getDescriptor().getName(), asset.getName(), parameterContextDto.getId()));
+                    }
+                }
+            }
+        }
     }
 
     @Override
@@ -434,11 +483,19 @@ public class StandardParameterContextDAO implements ParameterContextDAO {
                     .forEach(referencesToRemove::add);
             referencesToRemove.forEach(provider::removeReference);
         });
+
+        // Remove all assets
+        final Set<String> assetIds = Optional.ofNullable(assetManager.getAssets(parameterContextId))
+                .orElse(Collections.emptyList()).stream()
+                .map(Asset::getIdentifier)
+                .collect(Collectors.toSet());
+        assetIds.forEach(assetId -> assetManager.deleteAsset(assetId));
     }
 
     @Autowired
     public void setFlowController(final FlowController flowController) {
         this.flowManager = flowController.getFlowManager();
+        this.assetManager = flowController.getAssetManager();
     }
 
     private List<ProcessGroup> getBoundProcessGroups(final String parameterContextId) {
